--- a/checkOut.html
+++ b/checkOut.html
@@ -109,7 +109,20 @@ span.price {
 }
 </style>
 
-<script>
+<script type="text/javascript">
+
+function myFunction() {
+    var elements = document.getElementById("myForm").elements;
+    var obj ={};
+    for(var i = 0 ; i < elements.length ; i++){
+        var item = elements.item(i);
+        obj[item.name] = item.value;
+    }
+
+    alert(JSON.stringify(obj));
+}
+
+
 function change_text(){
 jsarr=JSON.parse(sessionStorage.getItem("jsArray"))
 	var tot_price=0;
@@ -130,7 +143,6 @@ price =(jsarr[i].count*jsarr[i].price);
 
 }
 window.onload=change_text;
-
 </script>
 
 </head>
@@ -141,8 +153,7 @@ window.onload=change_text;
 <div class="row">
   <div class="col-75">
     <div class="container">
-      <form action="/action_page.php">
-      
+      <form action="./Finalmessage.html" id ="myForm" onsubmit="return myFunction()" >
         <div class="row">
           <div class="col-50">
             <h3>Billing Address</h3>
@@ -181,7 +192,7 @@ window.onload=change_text;
         <label>
           <input type="checkbox" checked="checked" name="sameadr"> Shipping address same as billing
         </label>
-        <input type="submit" value="Continue to checkout" class="btn">
+        <input type="submit" value="Continue to checkout" class="btn"/>
       </form>
     </div>
   </div>
@@ -196,7 +207,5 @@ window.onload=change_text;
       <p>Total <span class="price" style="color:black" id="tot"><b>$0</b></span></p>
     </div>
   </div>
-</div>
-
 </body>
 </html>
