--- a/checkOut.html
+++ b/checkOut.html
@@ -119,7 +119,8 @@ function myFunction() {
         obj[item.name] = item.value;
     }
 
-    alert(JSON.stringify(obj));
+    console.log(JSON.stringify(obj));
+sessionStorage.setItem("billing_json", JSON.stringify(obj));
 }
 
 
