--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ return true;
   <div class="container" style="background-color:#f1f1f1">
    <p>
 	<Strong style="color: red">Valid User : <label id ="userid">Online_User</label> and Valid Password: <label id="userpass">Online_User</label></strong> 	</br></br>
-	<Strong style="color: red" id="Note">**** This site developed for Demo purpose and utilized for Automation testing/Data Scraping ***</strong>
+	<Strong style="color: red" id="Note">**** This site developed for Demo purpose and utilized for Automation testing/Web Scraping ***</strong>
     </P>
   </div>
 </form>
