--- a/AddToCart.html
+++ b/AddToCart.html
@@ -69,6 +69,8 @@ counter=counter-1;
 	if(jsonele1[index].count!=0){
  	document.getElementById("numberofitems").innerHTML=counter;
 	jsonele1[index].count=jsonele1[index].count-1;
+	var elements = document.getElementsByClassName("qtyqty");
+	elements[index].innerHTML="Qty : "+jsonele1[index].count;
 	var k=0;
 	for(i=0;i<5;i++){
 		if(jsonele1[i].count>0){
@@ -99,6 +101,8 @@ counter=counter+1;
 	var index=e.target.id;
  	document.getElementById("numberofitems").innerHTML=counter;
 	jsonele1[index].count=jsonele1[index].count+1;
+	var elements = document.getElementsByClassName("qtyqty");
+	elements[index].innerHTML="Qty : "+jsonele1[index].count;
 	var k=0;
 	for(i=0;i<5;i++){
 		if(jsonele1[i].count>0){
@@ -141,6 +145,7 @@ sessionStorage.setItem("jsArray", JSON.stringify(jsonobj));
   <h1>Fresh Apple</h1>
   <p class="price">$5</p>
   <p>Fresh Apple from shimla</p>
+  <a class ="qtyqty"> Qty:0 </a>
   <p><button id="0" onclick="myFunction(event)">Add to Cart</button></p>
   <p><button id="0" onclick="myFunction1(event)">Remove item</button></p>
 </div>
@@ -150,6 +155,7 @@ sessionStorage.setItem("jsArray", JSON.stringify(jsonobj));
   <h1>Banana</h1>
   <p class="price">$3</p>
   <p>Fresh and clean Banana bought directly from the plant</p>
+  <a class ="qtyqty"> Qty:0 </a>
   <p><button id="1" onclick="myFunction(event)">Add to Cart</button></p>
   <p><button id="1" onclick="myFunction1(event)">Remove item</button></p>
 </div>
@@ -159,6 +165,7 @@ sessionStorage.setItem("jsArray", JSON.stringify(jsonobj));
   <h1>Fresh Orange</h1>
   <p class="price">$5</p>
   <p>Clean Orange from Farm</p>
+   <a class ="qtyqty"> Qty:0 </a>
   <p><button id="2" onclick="myFunction(event)">Add to Cart</button></p>
    <p><button id="2" onclick="myFunction1(event)">Remove item</button></p>
 </div>
@@ -168,6 +175,7 @@ sessionStorage.setItem("jsArray", JSON.stringify(jsonobj));
   <h1>Brinjal</h1>
   <p class="price">$5</p>
   <p>Organic veggie - Brinjal</p>
+  <a class ="qtyqty"> Qty:0 </a>
   <p><button id="3" onclick="myFunction(event)">Add to Cart</button></p>
   <p><button id="3" onclick="myFunction1(event)">Remove item</button></p>
 </div>
@@ -177,6 +185,7 @@ sessionStorage.setItem("jsArray", JSON.stringify(jsonobj));
   <h1>Fresh potato</h1>
   <p class="price">$5</p>
   <p>Organic veggie</p>
+  <a class ="qtyqty"> Qty:0 </a>
   <p><button id="4" onclick="myFunction(event)">Add to Cart</button></p>
   <p><button id="4" onclick="myFunction1(event)">Remove item</button></p>
 </div>
