Added Page titles
Added Page titles

--- a/AddToCart.html
+++ b/AddToCart.html
@@ -93,6 +93,9 @@ sessionStorage.setItem("jsArray", JSON.stringify(jsonobj));
 		document.getElementById("priceamt").innerHTML =tot_price;
 }
 }
+else{
+alert("you cannot remove products in your before adding them!!");
+}
 }
 
 function myFunction(e){
@@ -127,7 +130,7 @@ sessionStorage.setItem("jsArray", JSON.stringify(jsonobj));
 	
 }
 </script>
-
+<title> Add products to your cart </title>
 
 </head>
 <body>
