--- a/Finalmessage.html
+++ b/Finalmessage.html
@@ -67,7 +67,7 @@ document.getElementById("cost").innerHTML ="Total Price: $"+tot_price;
 window.onload=change_text_data;
 </script>
 
-
+<title>Order placed</title>
 </head>
 <body>
 
