--- a/checkOut.html
+++ b/checkOut.html
@@ -144,7 +144,7 @@ price =(jsarr[i].count*jsarr[i].price);
 }
 window.onload=change_text;
 </script>
-
+<title> Checkout  </title>
 </head>
 <body>
 
