--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@ return true;
 <form name="myform" action ="./AddToCart.html" onsubmit="return validateform()">
   <div class="imgcontainer">
     <img src="img/Logo.JPG" alt="Avatar" class="avatar">
+    <p> Automate with Me - Demo App</p>
   </div>
 
   <div class="container">
@@ -111,6 +112,7 @@ return true;
 	<Strong style="color: red">Valid User : <label id ="userid">Online_User</label> and Valid Password: <label id="userpass">Online_User</label></strong> 	</br></br>
 	<Strong style="color: red" id="Note">**** This site developed for Demo purpose and utilized for Automation testing/Web Scraping ***</strong>
     </P>
+	<p> Developer: Vineet </p>
   </div>
 </form>
 
