--- a/checkOut.html
+++ b/checkOut.html
@@ -204,7 +204,7 @@ window.onload=change_text;
 	</div>
      
       <hr>
-      <p>Total <span class="price" style="color:black" id="tot"><b>$0</b></span></p>
+      <p>Total price<span class="price" style="color:black" id="tot"><b>$0</b></span></p>
     </div>
   </div>
 </body>
