Fixed the messages
Fixed the messages

--- a/AddToCart.html
+++ b/AddToCart.html
@@ -94,7 +94,7 @@ sessionStorage.setItem("jsArray", JSON.stringify(jsonobj));
 }
 }
 else{
-alert("you cannot remove products in your before adding them!!");
+alert("you cannot remove products from your cart, before adding them!!");
 }
 }
 
