--- a/Finalmessage.html
+++ b/Finalmessage.html
@@ -77,7 +77,7 @@ window.onload=change_text_data;
 <body>
 
 <div class="success">
-  <p><strong>Success!</strong> your order placed.</p>
+  <p><strong>Success!</strong> your order is placed.</p>
 </div>
 
 
