change in Image
change in Image

--- a/AddToCart.html
+++ b/AddToCart.html
@@ -164,7 +164,7 @@ sessionStorage.setItem("jsArray", JSON.stringify(jsonobj));
 </div>
 
 <div class="card item item3">
-  <img src="img/Orange.jpg" style="width:75%">
+  <img src="img/orange.jpg" style="width:75%">
   <h1>Fresh Orange</h1>
   <p class="price">$5</p>
   <p>Clean Orange from Farm</p>
